--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,6 @@
   "foldHeading": true,
   "showLineNumber": false,
   "strictLineBreaks": false,
-  "readableLineLength": true
+  "readableLineLength": true,
+  "spellcheck": true
 }
