--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -7,5 +7,9 @@
   "showLineNumber": false,
   "strictLineBreaks": false,
   "readableLineLength": true,
-  "spellcheck": true
+  "spellcheck": true,
+  "showUnsupportedFiles": true,
+  "propertiesInDocument": "visible",
+  "showIndentGuide": true,
+  "tabSize": 4
 }
